<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="31dp"
        android:text="@string/fileSize" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/fileLength" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/length"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="34dp"
        android:text="@string/label_start" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_start"
        android:layout_marginLeft="52dp"
        android:layout_toRightOf="@+id/length"
        android:text="@string/label_downloading" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_start"
        android:layout_alignBottom="@+id/btn_start"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/label_reset" />
	<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_start"
        android:background="@android:color/black"
        android:layout_marginTop="23dp"
	    	android:id="@+id/scrollView">	

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_show_log"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:text="@string/label_tmp_show_log"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>

	<TextView
	    android:id="@+id/downloading"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/btn_start"
	    android:layout_toRightOf="@+id/btn_pause"
	    android:text="@string/fileDownloading" />

</RelativeLayout>
